--- a/index.html
+++ b/index.html
@@ -4,51 +4,103 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>anonymous://chat</title>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 *{box-sizing:border-box}
-body{margin:0;background:#050505;color:#9ca3af;font-family:Courier New,monospace}
+body{
+  margin:0;
+  background:#050505;
+  color:#9ca3af;
+  font-family:Courier New,monospace
+}
 #top{
-  height:45px;background:#000;border-bottom:1px solid #111;
-  display:flex;align-items:center;justify-content:space-between;
-  padding:0 15px;font-size:13px
+  height:45px;
+  background:#000;
+  border-bottom:1px solid #111;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 15px;
+  font-size:13px
 }
 #right{display:flex;gap:15px;align-items:center}
-#chat{height:calc(100vh - 110px);overflow-y:auto;padding:10px}
+#chat{
+  height:calc(100vh - 110px);
+  overflow-y:auto;
+  padding:10px
+}
 .msg{margin-bottom:14px}
 .name{font-size:12px;color:#6b7280}
 .text{font-size:14px;color:#e5e7eb}
 #input{
-  height:65px;background:#000;border-top:1px solid #111;
-  display:flex;gap:10px;padding:10px
+  height:65px;
+  background:#000;
+  border-top:1px solid #111;
+  display:flex;
+  gap:10px;
+  padding:10px
 }
 input{
-  flex:1;background:#050505;border:1px solid #222;
-  color:#fff;padding:10px;font-family:inherit
+  flex:1;
+  background:#050505;
+  border:1px solid #222;
+  color:#fff;
+  padding:10px;
+  font-family:inherit
 }
 button{
-  background:#111;border:1px solid #333;
-  color:#9ca3af;padding:0 16px;cursor:pointer
+  background:#111;
+  border:1px solid #333;
+  color:#9ca3af;
+  padding:0 16px;
+  cursor:pointer
 }
-#adminBtn{display:flex;gap:6px;align-items:center;cursor:pointer;opacity:.8}
+#adminBtn{
+  display:flex;
+  gap:6px;
+  align-items:center;
+  cursor:pointer;
+  opacity:.8
+}
 #adminBtn:hover{opacity:1}
 .admin-avatar{
-  width:26px;height:26px;border:1px solid #333;border-radius:6px;
-  display:flex;align-items:center;justify-content:center;background:#111
+  width:26px;
+  height:26px;
+  border:1px solid #333;
+  border-radius:6px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:#111
 }
 .admin-text{font-size:11px}
 
 /* ADMIN PANEL */
 #adminPanel{
-  position:fixed;inset:0;background:rgba(0,0,0,.6);
-  display:none;align-items:center;justify-content:center;z-index:999
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:999
 }
 .panel-box{
-  background:#000;border:1px solid #222;padding:20px;width:260px;
-  display:flex;flex-direction:column;gap:10px
+  background:#000;
+  border:1px solid #222;
+  padding:20px;
+  width:260px;
+  display:flex;
+  flex-direction:column;
+  gap:10px
 }
-.panel-title{text-align:center;font-size:13px;color:#e5e7eb}
+.panel-title{
+  text-align:center;
+  font-size:13px;
+  color:#e5e7eb
+}
 </style>
 </head>
 
@@ -89,8 +141,15 @@ button{
 <script>
 /* 🔑 SUPABASE */
 const SUPABASE_URL = "https://dhwqtanvouvonspqwawm.supabase.co";
-const SUPABASE_KEY = "sb_publishable_pWR0L6kTZHHzzaoD2mCWsw_6BVk2DJY";
+const SUPABASE_KEY =
+"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
+
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+/* USER */
+const names=["root","ghost","null","cipher","void"];
+const user = names[Math.random()*names.length|0] + "#" + (Math.random()*900+100|0);
+const room = location.hash.replace("#","") || "global";
 
 /* ADMIN */
 const ADMIN_PASSWORD = "1234"; // değiştir
@@ -98,46 +157,44 @@ let isAdmin=false;
 let roomLocked=false;
 const mutedUsers=new Set();
 
-/* USER */
-const names=["root","ghost","null","cipher","void"];
-const user=names[Math.random()*names.length|0]+"#"+(Math.random()*900+100|0);
-const room=location.hash.replace("#","")||"global";
-
 /* FILTER */
 const bad=["salak","aptal","küfür"];
-const clean=t=>bad.reduce((a,w)=>a.replace(new RegExp(w,"gi"),"***"),t);
+const clean = t => bad.reduce((a,w)=>a.replace(new RegExp(w,"gi"),"***"),t);
 
-/* LOAD OLD */
+/* LOAD OLD MESSAGES */
 sb.from("messages")
-.select("*").eq("room",room)
-.order("created_at",{ascending:true})
-.then(r=>{if(r.data)r.data.forEach(show);});
+  .select("*")
+  .eq("room",room)
+  .order("created_at",{ascending:true})
+  .then(r=>{
+    if(r.data) r.data.forEach(show);
+  });
 
 /* REALTIME */
 sb.channel("room-"+room)
-.on("postgres_changes",
-  {event:"INSERT",schema:"public",table:"messages"},
-  payload=>{
-    if(payload.new.room===room) show(payload.new);
-    document.getElementById("status").innerText="online";
-  }
-).subscribe(status=>{
-  if(status==="SUBSCRIBED")
-    document.getElementById("status").innerText="online";
-});
+  .on("postgres_changes",
+    {event:"INSERT",schema:"public",table:"messages"},
+    payload=>{
+      if(payload.new.room===room) show(payload.new);
+      status.innerText="online";
+    }
+  )
+  .subscribe(s=>{
+    if(s==="SUBSCRIBED") status.innerText="online";
+  });
 
-/* SEND */
+/* SEND MESSAGE */
 function send(){
   const t=message.value.trim();
-  if(!t)return;
-  if(roomLocked&&!isAdmin)return alert("Room locked");
-  if(mutedUsers.has(user)&&!isAdmin)return alert("Muted");
-  if(t.startsWith("/")&&isAdmin){adminCmd(t);message.value="";return;}
+  if(!t) return;
+  if(roomLocked && !isAdmin) return alert("Room locked");
+  if(mutedUsers.has(user) && !isAdmin) return alert("Muted");
+  if(t.startsWith("/") && isAdmin){adminCmd(t);message.value="";return;}
   sb.from("messages").insert({room,name:user,text:clean(t)});
   message.value="";
 }
 
-/* UI */
+/* SHOW MESSAGE */
 function show(d){
   const m=document.createElement("div");
   m.className="msg";
@@ -146,7 +203,7 @@ function show(d){
   chat.scrollTop=chat.scrollHeight;
 }
 
-/* ADMIN */
+/* ADMIN UI */
 adminBtn.onclick=()=>{
   if(!isAdmin){
     const p=prompt("Admin password:");
@@ -155,20 +212,20 @@ adminBtn.onclick=()=>{
   }else toggleAdminPanel();
 };
 function toggleAdminPanel(){
-  adminPanel.style.display=
-    adminPanel.style.display==="flex"?"none":"flex";
+  adminPanel.style.display =
+    adminPanel.style.display==="flex" ? "none" : "flex";
 }
 function adminClear(){
   sb.from("messages").delete().eq("room",room);
 }
 function adminMute(){mutedUsers.add(muteInput.value);}
 function adminUnmute(){mutedUsers.delete(muteInput.value);}
-function adminCmd(c){
-  if(c==="/clear")adminClear();
-}
+function adminCmd(c){ if(c==="/clear") adminClear(); }
 
 /* ENTER */
-message.addEventListener("keydown",e=>{if(e.key==="Enter")send();});
+message.addEventListener("keydown",e=>{
+  if(e.key==="Enter") send();
+});
 </script>
 
 </body>
