--- a/index.html
+++ b/index.html
@@ -2,105 +2,21 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>anonymous://chat</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  background:#050505;
-  color:#9ca3af;
-  font-family:Courier New,monospace
-}
-#top{
-  height:45px;
-  background:#000;
-  border-bottom:1px solid #111;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:0 15px;
-  font-size:13px
-}
-#right{display:flex;gap:15px;align-items:center}
-#chat{
-  height:calc(100vh - 110px);
-  overflow-y:auto;
-  padding:10px
-}
-.msg{margin-bottom:14px}
-.name{font-size:12px;color:#6b7280}
-.text{font-size:14px;color:#e5e7eb}
-#input{
-  height:65px;
-  background:#000;
-  border-top:1px solid #111;
-  display:flex;
-  gap:10px;
-  padding:10px
-}
-input{
-  flex:1;
-  background:#050505;
-  border:1px solid #222;
-  color:#fff;
-  padding:10px;
-  font-family:inherit
-}
-button{
-  background:#111;
-  border:1px solid #333;
-  color:#9ca3af;
-  padding:0 16px;
-  cursor:pointer
-}
-#adminBtn{
-  display:flex;
-  gap:6px;
-  align-items:center;
-  cursor:pointer;
-  opacity:.8
-}
-#adminBtn:hover{opacity:1}
-.admin-avatar{
-  width:26px;
-  height:26px;
-  border:1px solid #333;
-  border-radius:6px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:#111
-}
-.admin-text{font-size:11px}
-
-/* ADMIN PANEL */
-#adminPanel{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:999
-}
-.panel-box{
-  background:#000;
-  border:1px solid #222;
-  padding:20px;
-  width:260px;
-  display:flex;
-  flex-direction:column;
-  gap:10px
-}
-.panel-title{
-  text-align:center;
-  font-size:13px;
-  color:#e5e7eb
-}
+body{margin:0;background:#000;color:#ccc;font-family:monospace}
+#top{height:40px;background:#000;border-bottom:1px solid #111;display:flex;justify-content:space-between;align-items:center;padding:0 10px}
+#chat{height:calc(100vh - 100px);overflow-y:auto;padding:10px}
+.msg{margin-bottom:10px}
+.name{color:#666;font-size:12px}
+.text{color:#eee}
+#input{height:60px;border-top:1px solid #111;display:flex}
+#input input{flex:1;background:#000;color:#fff;border:none;padding:10px}
+#input button{background:#111;color:#ccc;border:none;padding:0 20px}
 </style>
 </head>
 
@@ -108,121 +24,72 @@ button{
 
 <div id="top">
   <div>anonymous://chat</div>
-  <div id="right">
-    <div id="status">connect...</div>
-    <div id="adminBtn">
-      <div class="admin-avatar">A</div>
-      <div class="admin-text">ADMIN</div>
-    </div>
-  </div>
+  <div id="status">connect...</div>
 </div>
 
 <div id="chat"></div>
 
 <div id="input">
-  <input id="message" placeholder="type message..." autocomplete="off">
+  <input id="msg" placeholder="type message..." autocomplete="off">
   <button onclick="send()">send</button>
 </div>
 
-<!-- ADMIN PANEL -->
-<div id="adminPanel">
-  <div class="panel-box">
-    <div class="panel-title">ADMIN PANEL</div>
-    <button onclick="adminClear()">🧹 Clear Chat</button>
-    <button onclick="roomLocked=true">🔒 Lock Room</button>
-    <button onclick="roomLocked=false">🔓 Unlock Room</button>
-    <input id="muteInput" placeholder="username#123">
-    <button onclick="adminMute()">🔇 Mute</button>
-    <button onclick="adminUnmute()">🔊 Unmute</button>
-    <button onclick="toggleAdminPanel()">✖ Close</button>
-  </div>
-</div>
-
 <script>
-/* 🔑 SUPABASE */
 const SUPABASE_URL = "https://dhwqtanvouvonspqwawm.supabase.co";
-const SUPABASE_KEY =
-"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
 
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-/* USER */
-const names=["root","ghost","null","cipher","void"];
-const user = names[Math.random()*names.length|0] + "#" + (Math.random()*900+100|0);
-const room = location.hash.replace("#","") || "global";
+const room = "global";
+const user = "anon#" + Math.floor(Math.random()*999);
 
-/* ADMIN */
-const ADMIN_PASSWORD = "1234"; // değiştir
-let isAdmin=false;
-let roomLocked=false;
-const mutedUsers=new Set();
+const chat = document.getElementById("chat");
+const status = document.getElementById("status");
 
-/* FILTER */
-const bad=["salak","aptal","küfür"];
-const clean = t => bad.reduce((a,w)=>a.replace(new RegExp(w,"gi"),"***"),t);
+function show(m){
+  const d=document.createElement("div");
+  d.className="msg";
+  d.innerHTML=`<div class="name">${m.name}</div><div class="text">${m.text}</div>`;
+  chat.appendChild(d);
+  chat.scrollTop=chat.scrollHeight;
+}
 
-/* LOAD OLD */
+// 🔄 ESKİ MESAJLARI ÇEK
 sb.from("messages")
   .select("*")
   .eq("room",room)
   .order("created_at",{ascending:true})
-  .then(r=>{ if(r.data) r.data.forEach(show); });
-
-/* REALTIME */
-sb.channel("room-"+room)
-  .on("postgres_changes",
-    {event:"INSERT",schema:"public",table:"messages"},
-    payload=>{
-      if(payload.new.room===room) show(payload.new);
-      status.innerText="online";
-    }
-  )
-  .subscribe(s=>{
-    if(s==="SUBSCRIBED") status.innerText="online";
+  .then(r=>{
+    if(r.error){console.error(r.error);return;}
+    r.data.forEach(show);
+    status.innerText="connected";
   });
 
-/* SEND */
+// ⚡ REALTIME
+sb.channel("room-"+room)
+  .on("postgres_changes",
+    {event:"INSERT",schema:"public",table:"messages",filter:`room=eq.${room}`},
+    p=>show(p.new)
+  )
+  .subscribe();
+
+// 📤 GÖNDER
 function send(){
-  const t=message.value.trim();
-  if(!t) return;
-  if(roomLocked && !isAdmin) return alert("Room locked");
-  if(mutedUsers.has(user) && !isAdmin) return alert("Muted");
-  if(t.startsWith("/") && isAdmin){adminCmd(t);message.value="";return;}
-  sb.from("messages").insert({room,name:user,text:clean(t)});
-  message.value="";
+  const i=document.getElementById("msg");
+  if(!i.value.trim())return;
+
+  sb.from("messages").insert({
+    room:room,
+    name:user,
+    text:i.value
+  });
+
+  i.value="";
 }
 
-/* SHOW */
-function show(d){
-  const m=document.createElement("div");
-  m.className="msg";
-  m.innerHTML=`<div class="name">${d.name}</div><div class="text">${d.text}</div>`;
-  chat.appendChild(m);
-  chat.scrollTop=chat.scrollHeight;
-}
-
-/* ADMIN UI */
-adminBtn.onclick=()=>{
-  if(!isAdmin){
-    const p=prompt("Admin password:");
-    if(p===ADMIN_PASSWORD){isAdmin=true;toggleAdminPanel();}
-    else alert("Wrong password");
-  }else toggleAdminPanel();
-};
-function toggleAdminPanel(){
-  adminPanel.style.display =
-    adminPanel.style.display==="flex" ? "none" : "flex";
-}
-function adminClear(){
-  sb.from("messages").delete().eq("room",room);
-}
-function adminMute(){mutedUsers.add(muteInput.value);}
-function adminUnmute(){mutedUsers.delete(muteInput.value);}
-function adminCmd(c){ if(c==="/clear") adminClear(); }
-
-/* ENTER */
-message.addEventListener("keydown",e=>{
-  if(e.key==="Enter") send();
+// ENTER
+document.getElementById("msg").addEventListener("keydown",e=>{
+  if(e.key==="Enter")send();
 });
 </script>
 
