--- a/index.html
+++ b/index.html
@@ -4,101 +4,194 @@
 <meta charset="UTF-8">
 <title>anonymous://chat</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
 <style>
-body{margin:0;background:#000;color:#ccc;font-family:monospace}
-#top{height:40px;border-bottom:1px solid #111;display:flex;justify-content:space-between;align-items:center;padding:0 10px}
-#chat{height:calc(100vh - 100px);overflow-y:auto;padding:10px}
-.msg{margin-bottom:10px}
-.name{font-size:12px;color:#666}
-.text{color:#eee}
-#input{height:60px;border-top:1px solid #111;display:flex}
-#input input{flex:1;background:#000;color:#fff;border:none;padding:10px}
-#input button{background:#111;color:#ccc;border:none;padding:0 20px}
+body{margin:0;background:#050505;color:#d1d5db;font-family:monospace}
+#top{height:45px;background:#000;border-bottom:1px solid #111;
+display:flex;justify-content:space-between;align-items:center;padding:0 15px}
+#chat{height:calc(100vh - 120px);overflow-y:auto;padding:10px}
+.msg{margin-bottom:12px}
+.name{font-size:12px;color:#6b7280}
+.text{font-size:14px}
+#input{height:75px;border-top:1px solid #111;display:flex;padding:10px;gap:10px}
+#input input{flex:1;background:#000;border:1px solid #222;color:#fff;padding:10px}
+#input button{background:#111;border:1px solid #333;color:#ccc;padding:0 16px}
+#adminBtn{cursor:pointer;color:#f87171}
+#adminPanel{
+position:fixed;inset:0;background:rgba(0,0,0,.75);
+display:none;align-items:center;justify-content:center}
+#panel{
+width:340px;background:#000;border:1px solid #333;padding:20px}
+.panelBtn{width:100%;margin-top:8px;padding:10px;background:#111;
+border:1px solid #333;color:#ccc}
+#announce{
+position:fixed;top:60px;left:50%;transform:translateX(-50%);
+background:#111;border:1px solid #f87171;color:#f87171;
+padding:10px 20px;display:none}
 </style>
 </head>
 
 <body>
 
+<script>
+/* 🔐 ADMIN PASSWORD */
+const ADMIN_PASS="12345"; // değiştir
+</script>
+
 <div id="top">
   <div>anonymous://chat</div>
-  <div id="status">connect...</div>
+  <div>
+    <span id="roomLabel">#global</span> |
+    <span id="online">online: 1</span> |
+    <span id="adminBtn">ADMIN</span>
+  </div>
 </div>
 
+<div id="announce"></div>
 <div id="chat"></div>
 
 <div id="input">
-  <input id="msg" placeholder="type message..." autocomplete="off">
-  <button id="sendBtn">send</button>
+  <input id="msg" placeholder="type message...">
+  <button onclick="send()">send</button>
+</div>
+
+<div id="adminPanel">
+  <div id="panel">
+    <h3 style="color:#f87171">ADMIN PANEL</h3>
+    <button class="panelBtn" onclick="clearChat()">🧹 Clear</button>
+    <button class="panelBtn" onclick="lockRoom()">🔒 Lock</button>
+    <button class="panelBtn" onclick="unlockRoom()">🔓 Unlock</button>
+    <button class="panelBtn" onclick="logout()">🚪 Logout</button>
+  </div>
 </div>
 
 <script>
-/* 🔧 CONFIG */
-const SUPABASE_URL = "https://dhwqtanvouvonspqwawm.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
+/* CONFIG */
+const URL="https://dhwqtanvouvonspqwawm.supabase.co";
+const KEY="ANON_KEY";
+const sb=supabase.createClient(URL,KEY);
 
-const supa = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+let room="global";
+let isAdmin=false;
+let locked=false;
+let lastSend=0;
 
-const room = "global";
-const user = "anon#" + Math.floor(Math.random()*999);
+const user="anon#"+Math.floor(Math.random()*999);
+const hash=btoa(navigator.userAgent+screen.width+screen.height);
 
-const chat = document.getElementById("chat");
-const status = document.getElementById("status");
-const input = document.getElementById("msg");
+const chat=document.getElementById("chat");
 
-/* 🧱 UI */
+/* UI */
 function show(m){
-  const d = document.createElement("div");
-  d.className = "msg";
-  d.innerHTML = `<div class="name">${m.name}</div><div class="text">${m.text}</div>`;
+  const d=document.createElement("div");
+  d.className="msg";
+  d.innerHTML=`<div class="name">${m.name}</div><div class="text">${m.text}</div>`;
   chat.appendChild(d);
-  chat.scrollTop = chat.scrollHeight;
+  chat.scrollTop=chat.scrollHeight;
 }
 
-/* 📥 LOAD OLD MESSAGES */
-supa.from("messages")
-  .select("*")
-  .eq("room", room)
-  .order("created_at", { ascending: true })
-  .then(r => {
-    if (r.error) {
-      alert("SELECT ERROR: " + r.error.message);
+/* ANNOUNCE */
+function announce(t){
+  const a=document.getElementById("announce");
+  a.innerText=t;
+  a.style.display="block";
+  setTimeout(()=>a.style.display="none",5000);
+}
+
+/* LOAD */
+function loadRoom(){
+  chat.innerHTML="";
+  roomLabel.innerText="#"+room;
+
+  sb.from("messages").select("*").eq("room",room)
+  .order("created_at",{ascending:true})
+  .then(r=>r.data.forEach(show));
+}
+loadRoom();
+
+/* REALTIME */
+sb.channel("room")
+.on("postgres_changes",{event:"INSERT",schema:"public",table:"messages"},
+p=>{ if(p.new.room===room) show(p.new); })
+.subscribe();
+
+/* SEND */
+function send(){
+  const now=Date.now();
+  if(now-lastSend<2000)return;
+  lastSend=now;
+
+  let t=msg.value.trim();
+  if(!t)return;
+
+  if(/https?:\/\/|www\./i.test(t)) return alert("Link yasak");
+
+  if(locked&&!isAdmin) return alert("Room locked");
+
+  /* COMMANDS */
+  if(isAdmin){
+    if(t.startsWith("/announce ")){
+      announce(t.replace("/announce ",""));
+      log("announce");
+      return msg.value="";
+    }
+    if(t.startsWith("/kick ")){
+      announce("User kicked");
+      log("kick");
       return;
     }
-    r.data.forEach(show);
-    status.innerText = "connected";
-  });
-
-/* ⚡ REALTIME */
-supa.channel("room-global")
-  .on(
-    "postgres_changes",
-    { event: "INSERT", schema: "public", table: "messages" },
-    payload => show(payload.new)
-  )
-  .subscribe();
-
-/* 📤 SEND */
-function send(){
-  if(!input.value.trim()) return;
-
-  supa.from("messages").insert({
-    room: room,
-    name: user,
-    text: input.value
-  }).then(r=>{
-    if(r.error){
-      alert("INSERT ERROR: " + r.error.message);
+    if(t.startsWith("/ban ")){
+      sb.from("bans").insert({hash});
+      announce("User banned");
+      log("ban");
+      return;
     }
-  });
+  }
 
-  input.value = "";
+  if(t.startsWith("/join ")){
+    room=t.replace("/join ","");
+    loadRoom();
+    msg.value="";
+    return;
+  }
+
+  sb.from("messages").insert({room,name:user,text:t});
+  msg.value="";
 }
 
-document.getElementById("sendBtn").onclick = send;
-input.addEventListener("keydown", e => { if(e.key==="Enter") send(); });
+/* ADMIN */
+adminBtn.onclick=()=>{
+  if(isAdmin){adminPanel.style.display="flex";return;}
+  const p=prompt("Admin password");
+  if(p===ADMIN_PASS){isAdmin=true;adminPanel.style.display="flex";}
+};
+
+function logout(){isAdmin=false;adminPanel.style.display="none";}
+function clearChat(){
+  sb.from("messages").delete().eq("room",room);
+  chat.innerHTML="";
+  log("clear");
+}
+function lockRoom(){locked=true;announce("Room locked");log("lock");}
+function unlockRoom(){locked=false;announce("Room unlocked");log("unlock");}
+
+/* LOG */
+function log(a){
+  sb.from("admin_logs").insert({action:a});
+}
+
+/* ONLINE */
+const presence=sb.channel("online",{config:{presence:{key:user}}});
+presence.on("presence",{event:"sync"},()=>{
+  online.innerText="online: "+Object.keys(presence.presenceState()).length;
+});
+presence.subscribe(()=>presence.track({online:true}));
+
+/* BAN CHECK */
+sb.from("bans").select("hash").eq("hash",hash).then(r=>{
+  if(r.data.length){alert("Banned");location.reload();}
+});
 </script>
 
 </body>
